--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,16 +11,19 @@ header { background:#222; color:#ff6600; padding:1rem; text-align:center; font-s
 .screen { display:none; height:calc(100vh - 60px); }
 .active { display:block; }
 
-.top-controls { padding:10px; display:flex; gap:10px; background:#1a1a1a; }
+.top-controls { padding:10px; display:flex; gap:10px; background:#1a1a1a; flex-wrap:wrap; }
 input[type=text] { flex:1; padding:8px; border-radius:4px; border:1px solid #444; background:#333; color:#fff; }
 button { padding:8px 12px; background:#ff6600; border:none; border-radius:4px; cursor:pointer; color:#fff; font-weight:bold; }
 button:hover { background:#ff8833; }
 
-.channel-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(120px,1fr)); gap:12px; padding:12px; overflow-y:auto; height:calc(100% - 50px); }
-.channel-card { background:#222; border-radius:8px; padding:10px; text-align:center; cursor:pointer; transition:0.3s; }
+.category-filter { flex:1; max-width:200px; }
+.channel-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(120px,1fr)); gap:12px; padding:12px; overflow-y:auto; height:calc(100% - 90px); }
+.channel-card { background:#222; border-radius:8px; padding:10px; text-align:center; cursor:pointer; transition:0.3s; position:relative; }
 .channel-card:hover { background:#333; transform:scale(1.05); }
 .channel-card img { width:100%; height:80px; object-fit:contain; border-radius:4px; margin-bottom:6px; }
 .channel-card span { display:block; font-size:0.9rem; color:#fff; }
+.copy-btn { position:absolute; top:6px; right:6px; background:#ff6600; border:none; padding:3px 6px; border-radius:4px; font-size:0.75rem; cursor:pointer; }
+.copy-btn:hover { background:#ff8833; }
 
 .video-screen { display:flex; flex-direction:column; height:100%; }
 .video-wrapper { flex:1; background:#000; position:relative; border-radius:8px; overflow:hidden; }
@@ -42,6 +44,9 @@ video { width:100%; height:100%; object-fit:contain; background:#000; }
   <div class="top-controls">
     <input type="text" id="playlistUrl" placeholder="Enter M3U/M3U8 playlist URL">
     <button id="loadPlaylist">Load Playlist</button>
+    <select id="categoryFilter" class="category-filter">
+      <option value="all">All Categories</option>
+    </select>
   </div>
   <div class="channel-grid" id="channelGrid"></div>
 </div>
@@ -73,10 +78,11 @@ const playerScreen=document.getElementById('playerScreen');
 
 const playlistUrlInput=document.getElementById('playlistUrl');
 const loadPlaylistButton=document.getElementById('loadPlaylist');
+const categoryFilter=document.getElementById('categoryFilter');
 
 let channels=[];
 
-// Default playlist (Pakistan)
+// Default playlist
 const defaultPlaylist='https://iptv-org.github.io/iptv/countries/pk.m3u';
 playlistUrlInput.value=defaultPlaylist;
 loadPlaylist(defaultPlaylist);
@@ -87,9 +93,14 @@ loadPlaylistButton.addEventListener('click',()=>{
   if(url) loadPlaylist(url);
 });
 
+// Filter by category
+categoryFilter.addEventListener('change',()=>{
+  displayChannels();
+});
+
 // Load playlist
 function loadPlaylist(url){
-  errorElement.textContent=''; loading.style.display='block'; channels=[]; channelGrid.innerHTML='';
+  errorElement.textContent=''; loading.style.display='block'; channels=[]; channelGrid.innerHTML=''; categoryFilter.innerHTML='<option value="all">All Categories</option>';
   fetch(url).then(r=>r.text()).then(data=>{
     const lines=data.split('\n'); let tempChannel={};
     lines.forEach((line,index)=>{
@@ -97,26 +108,47 @@ function loadPlaylist(url){
       if(line.startsWith('#EXTINF')){
         const nameMatch=line.match(/,(.*)$/);
         const logoMatch=line.match(/tvg-logo="([^"]+)"/);
-        tempChannel={ name:nameMatch?nameMatch[1]:`Channel ${index+1}`, logo:logoMatch?logoMatch[1]:'https://via.placeholder.com/150x100?text=TV'};
+        const categoryMatch=line.match(/group-title="([^"]+)"/i);
+        tempChannel={ 
+          name:nameMatch?nameMatch[1]:`Channel ${index+1}`, 
+          logo:logoMatch?logoMatch[1]:'https://via.placeholder.com/150x100?text=TV',
+          category:categoryMatch?categoryMatch[1]:'Uncategorized'
+        };
       } else if(line && !line.startsWith('#')){
         tempChannel.url=line; channels.push({...tempChannel}); tempChannel={};
       }
     });
-    if(channels.length===0)throw new Error('No channels found'); displayChannels();
+    if(channels.length===0)throw new Error('No channels found'); 
+    populateCategories();
+    displayChannels();
     loading.style.display='none';
   }).catch(err=>{errorElement.textContent='Error loading playlist'; console.error(err); loading.style.display='none';});
 }
 
+// Populate categories
+function populateCategories(){
+  const categories=[...new Set(channels.map(ch=>ch.category))];
+  categories.forEach(cat=>{
+    const opt=document.createElement('option'); opt.value=cat; opt.textContent=cat; categoryFilter.appendChild(opt);
+  });
+}
+
 // Display channels in grid
 function displayChannels(){
+  const selectedCategory=categoryFilter.value;
   channelGrid.innerHTML='';
-  channels.forEach((ch)=>{
+  channels.filter(ch=>selectedCategory==='all'||ch.category===selectedCategory).forEach((ch)=>{
     const div=document.createElement('div');
     div.className='channel-card';
-    div.innerHTML=`<img src="${ch.logo}" alt="${ch.name}"><span>${ch.name}</span>`;
+    div.innerHTML=`<img src="${ch.logo}" alt="${ch.name}"><span>${ch.name}</span><button class="copy-btn" onclick="copyURL('${ch.url}')">Copy</button>`;
     div.addEventListener('click',()=>playChannel(ch));
     channelGrid.appendChild(div);
   });
+}
+
+// Copy channel URL
+function copyURL(url){
+  navigator.clipboard.writeText(url).then(()=>alert('URL copied to clipboard')).catch(err=>alert('Failed to copy'));
 }
 
 // Play channel
